--- a/pagina/css/styles.css
+++ b/pagina/css/styles.css
@@ -69,7 +69,7 @@ p{
     background-color: rgba(0, 54, 0, 0.438);
     width: 50%;
     padding: 20px ;
-    border: solid black 20px;
+    /* border: solid black 20px; */
 }
 
 footer{
