--- a/pagina/css/styles.css
+++ b/pagina/css/styles.css
@@ -73,12 +73,23 @@ p{
     overflow: auto;
 }
 
+nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+
 footer{
     height: 300px;
 }
 .divFooterLi , li{
     display: flex;
-    justify-content: space-around;
+    
+    justify-content: space-evenly;
     height: 30px;
     align-items: center;
     background-color: black;
@@ -86,6 +97,9 @@ footer{
     
     font-family: 'Press Start 2P', cursive;
     color: whitesmoke;
+}
+a{
+    text-decoration: none;
 }
 
 @media ( max-width: 740px ){
